# pymagiqtouch

./: README.md  pyproject.toml  test_auth.py  test_rest.py  test_ws.py
pymagiqtouch/: __init__.py  __main__.py  auth.py  client.py  types.py
