[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pymagiqtouch"
version = "0.1.0"
description = "Python library for interfacing with the Seeley MagiQtouch server (REST & WebSocket), for use with Home Assistant."
authors = [
    {name="AshieSlashy"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mandate>=2.0.1",
    "websockets>=12.0",
    "aiohttp>=3.8.0",
    "requests>=2.28.0"
]

[project.urls]
"Homepage" = "https://github.com/ashieslashy/pymagiqtouch"
"Bug Tracker" = "https://github.com/ashieslashy/pymagiqtouch/issues"

[tool.setuptools]
packages = ["pymagiqtouch"]
